--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -14,6 +14,7 @@
               <li><a href=/about-me>About Me</a></li>
               <li><a href=/portfolio>Portfolio</a></li>
               <li><a href=/blog>Blog</a></li>
+              <li><a href=/photography>Photography</a></li>
               <li><a href=/contact-me>Contact Me</a></li>
             </ul>
           </div>
@@ -23,8 +24,3 @@
 
     <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-    <!-- <script>
-      $(document).ready(function() {
-        $('.collapse').collapse();
-      });
-    </script> -->
