--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
     <title>Saeam Kwon</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
     <link href='http://fonts.googleapis.com/css?family=Lato:thin,thinitalic,light,lightitalic' rel='stylesheet' type='text/css' />
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet" /ß>
     <link rel="stylesheet" type="text/css" href="/css/main.css" />
   </head>
 
